Restored to 'e98d910ab316f22c8b89f27f1bbc801b73f1bc85'
Replit-Restored-To: e98d910ab316f22c8b89f27f1bbc801b73f1bc85

--- a/react-native-app/app.json
+++ b/react-native-app/app.json
@@ -43,9 +43,8 @@
     "scheme": "calonik-ai",
     "extra": {
       "eas": {
-        "projectId": "69fbe8d9-3226-4916-a01c-3ac66b4e8da7"
+        "projectId": "your-project-id-here"
       }
-    },
-    "owner": "yanpvuo"
+    }
   }
 }
